[package]
name = "purin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
reqwest = "0.11.26"
regex = "1.10.3"
termcolor = "1.4.1"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread", "process"] }
home = "0.5.9"
